k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-image-classifier
  labels:
    name: mlops-image-classifier
    environment: production
