k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-classifier-service
  namespace: mlops-image-classifier
  labels:
    app: image-classifier
spec:
  type: LoadBalancer
  selector:
    app: image-classifier
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
